
libbitc_ladir = $(includedir)/bitc

libbitc_la_HEADERS =	\
		crypto/hmac.h	\
		crypto/ripemd160.h	\
		crypto/sha1.h	\
		crypto/sha2.h	\
		address.h	\
		addr_match.h	\
		base58.h	\
		blkdb.h		\
		bloom.h		\
		buffer.h	\
		buint.h		\
		checkpoints.h	\
		clist.h		\
		compat.h	\
		coredefs.h	\
		core.h		\
		cstr.h		\
		endian.h	\
		hashtab.h	\
		hdkeys.h	\
		hexcode.h	\
		key.h		\
		mbr.h		\
		message.h	\
		parr.h		\
		script.h	\
		serialize.h	\
		util.h		\
		wallet.h

libbitcnet_ladir = $(includedir)/bitc/net/

libbitcnet_la_HEADERS =	\
		net/dns.h	\
		net/fakepoll.h	\
		net/net.h	\
		net/netbase.h	\
		net/peerman.h

libbitcaes_ladir = $(includedir)/bitc/crypto/

libbitcaes_la_HEADERS =	\
		crypto/aes.h		\
		crypto/aes_util.h	\
		crypto/aesopt.h		\
		crypto/aestab.h
