
libbitc_ladir = $(includedir)/bitc

libbitc_la_HEADERS =	\
        crypto/fortuna.h    \
        crypto/hmac.h	    \
        crypto/prng.h       \
        crypto/rijndael.h   \
        crypto/rijndael.tbl \
		crypto/ripemd160.h	\
		crypto/sha1.h	\
		crypto/sha2.h	\
		address.h	\
		addr_match.h	\
		base58.h	\
		blkdb.h		\
		bloom.h		\
		buffer.h	\
		buint.h		\
		checkpoints.h	\
		clist.h		\
		compat.h	\
		coredefs.h	\
		core.h		\
		cstr.h		\
		endian.h	\
		hashtab.h	\
		hdkeys.h	\
		hexcode.h	\
		key.h		\
		log.h		\
		mbr.h		\
		message.h	\
		parr.h		\
		script.h	\
		serialize.h	\
		util.h

libbitcev_ladir=$(includedir)/bitc/net

libbitcev_la_HEADERS = \
		net/ev.h	\
		net/ev_vars.h	\
		net/ev_wrap.h	\
		net/event.h

libbitcnet_ladir = $(includedir)/bitc/net/

libbitcnet_la_HEADERS =	\
		net/dns.h	\
		net/fakepoll.h	\
		net/net.h	\
		net/netbase.h	\
		net/peerman.h

libbitcwallet_ladir = $(includedir)/bitc/wallet/

libbitcwallet_la_HEADERS =	\
		crypto/aes_util.h	\
		crypto/ctaes.h		\
		json/cJSON.h	\
		wallet/wallet.h
