
libbitc_ladir = $(includedir)/bitc

libbitc_la_HEADERS =	\
		crypto/ctaes.h   \
		crypto/fortuna.h   \
		crypto/hmac.h   \
		crypto/prng.h   \
		crypto/ripemd160.h   \
		crypto/sha1.h	\
		crypto/sha2.h	\
		primitives/block.h	\
		primitives/transaction.h	\
		address.h	\
		addr_match.h	\
		base58.h	\
		bloom.h		\
		buffer.h	\
		buint.h		\
		checkpoints.h	\
		clist.h		\
		compat.h	\
		coredefs.h	\
		core.h		\
		cstr.h		\
		endian.h	\
		hashtab.h	\
		hdkeys.h	\
		hexcode.h	\
		key.h		\
		log.h		\
		mbr.h		\
		message.h	\
		parr.h		\
		script.h	\
		serialize.h	\
		util.h

libbitcdb_ladir = $(includedir)/bitc/db

libbitcdb_la_HEADERS = \
		db/chaindb.h \
		db/db.h

libbitcnet_ladir = $(includedir)/bitc/net

libbitcnet_la_HEADERS =	\
		net/dns.h	\
		net/fakepoll.h	\
		net/net.h	\
		net/netbase.h	\
		net/peerman.h	\
		net/version.h

libbitcwallet_ladir = $(includedir)/bitc/wallet

libbitcwallet_la_HEADERS =	\
		crypto/aes_util.h	\
		wallet/wallet.h
