
ccoinincludedir=$(includedir)/ccoin

ccoininclude_HEADERS = \
	crypto/hmac.h	\
	crypto/ripemd160.h	\
	crypto/sha1.h	\
	crypto/sha2.h	\
	address.h	\
	addr_match.h	\
	base58.h	\
	blkdb.h		\
	bloom.h		\
	buffer.h	\
	buint.h		\
	checkpoints.h	\
	clist.h		\
	compat.h	\
	coredefs.h	\
	core.h		\
	cstr.h		\
	endian.h	\
	hashtab.h	\
	hdkeys.h	\
	hexcode.h	\
	key.h		\
	mbr.h		\
	message.h	\
	net.h		\
	parr.h		\
	script.h	\
	serialize.h	\
	util.h		\
	wallet.h
